Fix issue on Chrome where video is vertically aligned based on resolution height

--- a/css/styles.css
+++ b/css/styles.css
@@ -337,16 +337,16 @@ Waypoints
 }
 
 .description {
-  display: flex;
   flex: 1;
-  flex-direction: column;
   padding: 1rem;
+  margin: auto;
 }
 
 .visual-reference {
-  width: 50%;
+  width: 40%;
+  height: 100%;
+  margin: auto;
   padding: 0 1rem 0 1rem;
-  display: flex;
   flex: 1;
 }
 
